--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -36,7 +36,7 @@
   "Collect Winnings": "Collect Winnings",
   "Buy Tickets": "Buy Tickets",
   "Harvest": "Harvest",
-  "PancakeSwap": "PancakeSwap",
+  "PancakeSwap": "1ECH",
   "For Sale": "For Sale",
   "CAKE to burn:": "CAKE to burn:",
   "Unstake": "Unstake",
@@ -847,13 +847,13 @@
   "CAKE token": "CAKE token",
   "BTC token": "BTC token",
   "Earn passive income with crypto.": "Earn passive income with crypto.",
-  "PancakeSwap makes it easy to make your crypto work for you.": "PancakeSwap makes it easy to make your crypto work for you.",
+  "PancakeSwap makes it easy to make your crypto work for you.": "1ECH makes it easy to make your crypto work for you.",
   "Explore": "Explore",
   "Pie chart": "Pie chart",
   "Stocks chart": "Stocks chart",
   "Folder with cake token": "Folder with cake token",
-  "CAKE makes our world go round.": "CAKE makes our world go round.",
-  "CAKE token is at the heart of the PancakeSwap ecosystem. Buy it, win it, farm it, spend it, stake it... heck, you can even vote with it!": "CAKE token is at the heart of the PancakeSwap ecosystem. Buy it, win it, farm it, spend it, stake it... heck, you can even vote with it!",
+  "RECH makes our world go round.": "RECH makes our world go round.",
+  "RECH token is at the heart of the 1ECH ecosystem. Buy it, win it, farm it, spend it, stake it... heck, you can even vote with it!": "RECH token is at the heart of the 1ECH ecosystem. Buy it, win it, farm it, spend it, stake it... heck, you can even vote with it!",
   "Small 3d pancake": "Small 3d pancake",
   "%cakePrizeInUsd% in CAKE prizes this round": "%cakePrizeInUsd% in CAKE prizes this round",
   "Buy tickets with CAKE, win CAKE if your numbers match": "Buy tickets with CAKE, win CAKE if your numbers match",
@@ -864,7 +864,7 @@
   "PancakeSwap has the most users of any decentralized platform, ever.": "PancakeSwap has the most users of any decentralized platform, ever.",
   "Will you join them?": "Will you join them?",
   "$%tvl% staked": "$%tvl% staked",
-  "The moon is made of pancakes.": "The moon is made of pancakes.",
+  "The moon is made of pancakes.": "The moon is on Echelon.",
   "Trade, earn, and win crypto on the most popular decentralized platform in the galaxy.": "Trade, earn, and win crypto on the most popular decentralized platform in the galaxy.",
   "Lunar bunny": "Lunar bunny",
   "Total supply": "Total supply",
@@ -894,7 +894,7 @@
   "%trades% trades": "%trades% trades",
   "Provably fair, on-chain games.": "Provably fair, on-chain games.",
   "made in the last 30 days": "made in the last 30 days",
-  "Win big with PancakeSwap.": "Win big with PancakeSwap.",
+  "Win big with PancakeSwap.": "Win big with 1ECH.",
   "Copied": "Copied",
   "Make a Profile": "Make a Profile",
   "Your Address": "Your Address",
