--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -841,7 +841,7 @@
   "Your Liquidity": "Your Liquidity",
   "Remove liquidity to receive tokens back": "Remove liquidity to receive tokens back",
   "Trade anything. No registration, no hassle.": "Trade anything. No registration, no hassle.",
-  "Trade any token on BNB Smart Chain in seconds, just by connecting your wallet.": "Trade any token on BNB Smart Chain in seconds, just by connecting your wallet.",
+  "Trade any token on BNB Smart Chain in seconds, just by connecting your wallet.": "Trade any token on Echelon in seconds, just by connecting your wallet.",
   "Learn": "Learn",
   "BNB token": "BNB token",
   "CAKE token": "CAKE token",
@@ -857,8 +857,8 @@
   "Small 3d pancake": "Small 3d pancake",
   "%cakePrizeInUsd% in CAKE prizes this round": "%cakePrizeInUsd% in CAKE prizes this round",
   "Buy tickets with CAKE, win CAKE if your numbers match": "Buy tickets with CAKE, win CAKE if your numbers match",
-  "$%bnbWonInUsd% in BNB won so far": "$%bnbWonInUsd% in BNB won so far",
-  "Will BNB price rise or fall? guess correctly to win!": "Will BNB price rise or fall? guess correctly to win!",
+  "$%bnbWonInUsd% in BNB won so far": "$%bnbWonInUsd% in ECH won so far",
+  "Will BNB price rise or fall? guess correctly to win!": "Will ECH price rise or fall? guess correctly to win!",
   "And those users are now entrusting the platform with over $%tvl% in funds.": "And those users are now entrusting the platform with over $%tvl% in funds.",
   "Trusted with billions.": "Trusted with billions.",
   "PancakeSwap has the most users of any decentralized platform, ever.": "PancakeSwap has the most users of any decentralized platform, ever.",
