add echelon to currency list

--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -900,8 +900,8 @@
   "Your Address": "Your Address",
   "Your Wallet": "Your Wallet",
   "Transactions": "Transactions",
-  "BNB Balance Low": "BNB Balance Low",
-  "BNB Balance": "BNB Balance",
+  "BNB Balance Low": "ECH Balance Low",
+  "BNB Balance": "ECH Balance",
   "CAKE Balance": "CAKE Balance",
   "You need BNB for transaction fees.": "You need BNB for transaction fees.",
   "Disconnect": "Disconnect",
@@ -1193,7 +1193,7 @@
   "No NFTs found": "No NFTs found",
   "Listed": "Listed",
   "Transaction Details": "Transaction Details",
-  "Buy and Sell NFTs on BNB Smart Chain": "Buy and Sell NFTs on BNB Smart Chain",
+  "Buy and Sell NFTs on BNB Smart Chain": "Buy and Sell NFTs on Echelon",
   "Modified": "Modified",
   "From/To": "From/To",
   "Item": "Item",
