--- a/public/locales/fr-FR.json
+++ b/public/locales/fr-FR.json
@@ -1350,7 +1350,7 @@
   "Please apply here": "Veuillez envoyer votre demande ici",
   "What are the fees?": "À combien les frais s'élèvent-ils ?",
   "100% of all platform fees taken by PancakeSwap from sales are used to buy back and BURN CAKE tokens in our weekly CAKE burns.": "La totalité des frais de plateforme perçus par PancakeSwap sur les ventes est utilisée pour racheter et DÉTRUIRE les jetons CAKE lors de notre destruction hebdomadaire de CAKE.",
-  "Platform fees: 2% is subtracted from NFT sales on the market. Subject to change.Collection fees: Additional fees may be taken by collection creators, once those collections are live. These will not contribute to the CAKE burns.": "Frais de plateforme : 2 % sont soustraits des ventes de NFT sur le marché. Sous réserve de modifications. Frais de collection : des frais supplémentaires peuvent être perçus par les créateurs des collections une fois que ces collections sont en ligne. Ceux-ci ne contribueront pas à la destruction de CAKE.",
+  "Platform fees: 2% is subtracted from NFT sales on the market. Subject to change.Collection fees: Additional fees may be taken by collection creators, once those collections are live. These will not contribute to the CAKE burns.": "Frais de plateforme : 2 % sont soustraits des ventes de NFT sur le marché. GenTakeda réserve de modifications. Frais de collection : des frais supplémentaires peuvent être perçus par les créateurs des collections une fois que ces collections sont en ligne. Ceux-ci ne contribueront pas à la destruction de CAKE.",
   "The smart contract address will be released soon before the sale starts.": "L'adresse du contrat intelligent sera publiée peu avant le début de la vente.",
   "Supply Count": "Quantité disponible",
   "Brand": "Marque",
